Continue taskbar overflow fixes

--- a/css/taskbar/openedapps/centered.css
+++ b/css/taskbar/openedapps/centered.css
@@ -10,6 +10,14 @@
   align-items: center;
 }
 
+#ArcShell div.taskbar div.opened-apps.centered button {
+  min-width: 35px;
+}
+
+#ArcShell div.taskbar div.opened-apps.centered button.labels {
+  min-width: fit-content !important;
+}
+
 #ArcShell div.taskbar:not(.vertical) div.opened-apps.centered {
   left: 0px;
   width: 100%;
