--- a/css/taskbar/startbutton.css
+++ b/css/taskbar/startbutton.css
@@ -6,6 +6,7 @@
   width: 35px;
   height: 35px;
   min-width: 35px;
+  min-height: 35px;
   border-radius: 7px;
   border: none;
   margin: 0;
